--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.13MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.41MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.57MB/s(Youtube:不良林), server: 152.89.210.105, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
   - {name: 🇨🇳 中国-6.25MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.01MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.55MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.54MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-577.5KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 台湾-1.70MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-472.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇮🇳 印度-2.55MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.99MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.75MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-577.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.9KB/s(Youtube:不良林)
       - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-577.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.9KB/s(Youtube:不良林)
       - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-577.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.9KB/s(Youtube:不良林)
       - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-577.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.9KB/s(Youtube:不良林)
       - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-577.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.9KB/s(Youtube:不良林)
       - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-577.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.9KB/s(Youtube:不良林)
       - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-577.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-472.9KB/s(Youtube:不良林)
       - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
