--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.57MB/s(Youtube:不良林), server: 152.89.210.105, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇰🇷 韩国-1.06MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.72MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.51MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: 8d0db1d1-62a2-4d8b-b272-e4f364e064c6, sni: shcm.pdjc.cc, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.75MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.84MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-342.6KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
-  - {name: 🇯🇵 日本-5.51MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.31MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.34MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.41MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.09MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-811.5KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-5.47MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.50MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.87MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.83MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-342.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.31MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-342.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.31MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-342.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.31MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-342.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.31MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-342.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.31MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-342.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.31MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-342.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.31MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
